--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "firebase": "^9.10.0",
     "next": "12.3.1",
     "next-auth": "^4.12.0",
     "react": "18.2.0",
